@@ -1,3 +1,13 @@
+2016-05-09  Ada Chan  <adachan@apple.com>
+
+        Introduce WebVideoFullscreenInterfaceMac::isPlayingVideoInEnhancedFullscreen() and use it in WebVideoFullscreenManagerProxy::isPlayingVideoInEnhancedFullscreen()
+        https://bugs.webkit.org/show_bug.cgi?id=157493
+
+        Reviewed by Dan Bernstein.
+
+        * UIProcess/Cocoa/WebVideoFullscreenManagerProxy.mm:
+        (WebKit::WebVideoFullscreenManagerProxy::isPlayingVideoInEnhancedFullscreen):
+
 2016-05-06  Ada Chan  <adachan@apple.com>
 
         Add WKPageRef SPI to tell whether there's a video playing in enhanced fullscreen
